@@ -147,7 +147,7 @@
 (display "\r")(let1 val (begin (let ((a '(1 2 3))) `(,@a b c))) (if (equal? '(1 2 3 b c) val) (format #t " Running ~d/~d" 149 1934) (begin (add-error '(let ((a '(1 2 3))) `(,@a b c)) '(1 2 3 b c) val))))
 (display "\r")(let1 val (begin (let ((name 'a)) `(list ,name ',name))) (if (equal? '(list a 'a) val) (format #t " Running ~d/~d" 150 1934) (begin (add-error '(let ((name 'a)) `(list ,name ',name)) '(list a 'a) val))))
 (display "\r")(let1 val (begin `(list ,(+ 1 2) 4)) (if (equal? '(list 3 4) val) (format #t " Running ~d/~d" 151 1934) (begin (add-error '`(list ,(+ 1 2) 4) '(list 3 4) val))))
-(display "\r")(let1 val (begin (let ((a '(1 2 3))) `(1 unquote a))) (if (equal? '(1 1 2 3) val) (format #t " Running ~d/~d" 152 1934) (begin (add-error '(let ((a '(1 2 3))) `(1 unquote a)) '(1 1 2 3) val))))
+(display "\r")(let1 val (begin (let ((a '(1 2 3))) `(1 . ,a))) (if (equal? '(1 1 2 3) val) (format #t " Running ~d/~d" 152 1934) (begin (add-error '(let ((a '(1 2 3))) `(1 . ,a)) '(1 1 2 3) val))))
 (display "\r")(let1 val (begin (let ((a '(1 2 3))) `,a)) (if (equal? '(1 2 3) val) (format #t " Running ~d/~d" 153 1934) (begin (add-error '(let ((a '(1 2 3))) `,a) '(1 2 3) val))))
 (display "\r")(let1 val (begin (let ((a '(1 2 3))) `(,@a))) (if (equal? '(1 2 3) val) (format #t " Running ~d/~d" 154 1934) (begin (add-error '(let ((a '(1 2 3))) `(,@a)) '(1 2 3) val))))
 (display "\r")(let1 val (begin (let ((a '(1 2 3))) `(0 ,@a))) (if (equal? '(0 1 2 3) val) (format #t " Running ~d/~d" 155 1934) (begin (add-error '(let ((a '(1 2 3))) `(0 ,@a)) '(0 1 2 3) val))))
@@ -259,7 +259,7 @@
 (display "\r")(let1 val (begin #\a) (if (equal? '#\a val) (format #t " Running ~d/~d" 261 1934) (begin (add-error '#\a '#\a val))))
 (display "\r")(let1 val (begin (eof-object? 3)) (if (equal? '#f val) (format #t " Running ~d/~d" 262 1934) (begin (add-error '(eof-object? 3) '#f val))))
 (display "\r")(let1 val (begin 102) (if (equal? '102 val) (format #t " Running ~d/~d" 263 1934) (begin (add-error '102 '102 val))))
-(display "\r")(let1 val (begin (define val 3) (define (func8) (define val 4) val) (func8)) (if (equal? '4 val) (format #t " Running ~d/~d" 264 1934) (begin (add-error '(define val 3) '4 val))))
+(display "\r")(let1 val (begin (define val 3) (define (func8) (define val 4) val) (func8)) (if (equal? '4 val) (format #t " Running ~d/~d" 264 1934) (begin (add-error (quote (define val 3) (define (func8) (define val 4) val) (func8)) '4 val))))
 (display "\r")(let1 val (begin ((lambda () (define p (cons 1 2)) (set-cdr! p 3) p))) (if (equal? '(1 . 3) val) (format #t " Running ~d/~d" 265 1934) (begin (add-error '((lambda () (define p (cons 1 2)) (set-cdr! p 3) p)) '(1 . 3) val))))
 (display "\r")(let1 val (begin ((lambda () (define q (cons 1 2)) (set-car! q 3) q))) (if (equal? '(3 . 2) val) (format #t " Running ~d/~d" 266 1934) (begin (add-error '((lambda () (define q (cons 1 2)) (set-car! q 3) q)) '(3 . 2) val))))
 (display "\r")(let1 val (begin (begin #f #t)) (if (equal? '#t val) (format #t " Running ~d/~d" 267 1934) (begin (add-error '(begin #f #t) '#t val))))
@@ -352,7 +352,7 @@
 (display "\r")(let1 val (begin (eqv? (lambda () 1) (lambda () 2))) (if (equal? '#f val) (format #t " Running ~d/~d" 367 1934) (begin (add-error '(eqv? (lambda () 1) (lambda () 2)) '#f val))))
 (display "\r")(let1 val (begin (eqv? 123456789101112 123456789101112)) (if (equal? '#t val) (format #t " Running ~d/~d" 368 1934) (begin (add-error '(eqv? 123456789101112 123456789101112) '#t val))))
 (display "\r")(let1 val (begin (eqv? #f 'nil)) (if (equal? '#f val) (format #t " Running ~d/~d" 369 1934) (begin (add-error '(eqv? #f 'nil) '#f val))))
-(display "\r")(let1 val (begin (define (foo n) (let loop ((n n)) (cond ((null? n)) (else (loop (cdr n)))))) (and (foo '()) (foo '(1 2 3)))) (if (equal? '#t val) (format #t " Running ~d/~d" 370 1934) (begin (add-error '(define (foo n) (let loop ((n n)) (cond ((null? n)) (else (loop (cdr n)))))) '#t val))))
+(display "\r")(let1 val (begin (define (foo n) (let loop ((n n)) (cond ((null? n)) (else (loop (cdr n)))))) (and (foo '()) (foo '(1 2 3)))) (if (equal? '#t val) (format #t " Running ~d/~d" 370 1934) (begin (add-error (quote (define (foo n) (let loop ((n n)) (cond ((null? n)) (else (loop (cdr n)))))) (and (foo '()) (foo '(1 2 3)))) '#t val))))
 (display "\r")(let1 val (begin (digit->integer #\3 10)) (if (equal? '3 val) (format #t " Running ~d/~d" 371 1934) (begin (add-error '(digit->integer #\3 10) '3 val))))
 (display "\r")(let1 val (begin (+)) (if (equal? '0 val) (format #t " Running ~d/~d" 372 1934) (begin (add-error '(+) '0 val))))
 (display "\r")(let1 val (begin (*)) (if (equal? '1 val) (format #t " Running ~d/~d" 373 1934) (begin (add-error '(*) '1 val))))
@@ -377,7 +377,7 @@
 (display "\r")(let1 val (begin (list? '())) (if (equal? '#t val) (format #t " Running ~d/~d" 455 1934) (begin (add-error '(list? '()) '#t val))))
 (display "\r")(let1 val (begin (list? '(a . b))) (if (equal? '#f val) (format #t " Running ~d/~d" 456 1934) (begin (add-error '(list? '(a . b)) '#f val))))
 (display "\r")(let1 val (begin "abc") (if (equal? '"abc" val) (format #t " Running ~d/~d" 457 1934) (begin (add-error '"abc" '"abc" val))))
-(display "\r")(let1 val (begin (match '(0 (1 2) (3 4 5)) ((a (b c) (d e f)) (list a b c d e f)))) (if (equal? '(0 1 2 3 4 5) val) (format #t " Running ~d/~d" 458 1934) (add-error '(match '(0 (1 2) (3 4 5)) ((a (b c) (d e f)) (list a b c d e f))) '(0 1 2 3 4 5) val)))(display "\r")(let1 val (begin (match 123 ((? string? x) (list 'string x)) ((? number? x) (list 'number x)))) (if (equal? '(number 123) val) (format #t " Running ~d/~d" 459 1934) (add-error '(match 123 ((? string? x) (list 'string x)) ((? number? x) (list 'number x))) '(number 123) val)))(display "\r")(let1 val (begin (define let-analyzer (match-lambda (('let (? symbol?) ((var expr) ...) body ...) (format "named let, vars=~s exprs=~s" var expr)) (('let ((var expr) ...) body ...) (format "normal let, vars=~s exprs=~s" var expr)) (_ (format "malformed let")))) (let-analyzer '(let ((a b) (c d)) e f g))) (if (equal? '"normal let, vars=(a c) exprs=(b d)" val) (format #t " Running ~d/~d" 460 1934) (add-error '(define let-analyzer (match-lambda (('let (? symbol?) ((var expr) ...) body ...) (format "named let, vars=~s exprs=~s" var expr)) (('let ((var expr) ...) body ...) (format "normal let, vars=~s exprs=~s" var expr)) (_ (format "malformed let")))) '"normal let, vars=(a c) exprs=(b d)" val)))(display "\r")(let1 val (begin (let-analyzer '(let foo ((x (f a b)) (y (f c d))) e f g))) (if (equal? '"named let, vars=(x y) exprs=((f a b) (f c d))" val) (format #t " Running ~d/~d" 461 1934) (add-error '(let-analyzer '(let foo ((x (f a b)) (y (f c d))) e f g)) '"named let, vars=(x y) exprs=((f a b) (f c d))" val)))(display "\r")(let1 val (begin (let-analyzer '(let (a) b c d))) (if (equal? '"malformed let" val) (format #t " Running ~d/~d" 462 1934) (add-error '(let-analyzer '(let (a) b c d)) '"malformed let" val)))(display "\r")(let1 val (begin (match '(the answer is 42) (`(the answer is ,value) value) (else #f))) (if (equal? '42 val) (format #t " Running ~d/~d" 463 1934) (add-error '(match '(the answer is 42) (`(the answer is ,value) value) (else #f)) '42 val)))(display "\r")(let1 val (begin (match '(the answer was 42) (`(the answer is ,value) value) (else #f))) (if (equal? '#f val) (format #t " Running ~d/~d" 464 1934) (add-error '(match '(the answer was 42) (`(the answer is ,value) value) (else #f)) '#f val)))(display "\r")(let1 val (begin (match '(a b c d) ((the answer is value) value) (else #f))) (if (equal? 'd val) (format #t " Running ~d/~d" 465 1934) (add-error '(match '(a b c d) ((the answer is value) value) (else #f)) 'd val)))(display "\r")(let1 val (begin (match "mosh.scm" ((? string? (= #/(.*)\.([^.]+)$/ m)) (format "base=~a suffix=~a" (m 1) (m 2))))) (if (equal? '"base=mosh suffix=scm" val) (format #t " Running ~d/~d" 466 1934) (add-error '(match "mosh.scm" ((? string? (= #/(.*)\.([^.]+)$/ m)) (format "base=~a suffix=~a" (m 1) (m 2)))) '"base=mosh suffix=scm" val)))(display "\r")(let1 val (begin (do ((i 0) (j 0)) ((zero? j) (set! i 1) (set! i 2) i))) (if (equal? '2 val) (format #t " Running ~d/~d" 467 1934) (add-error '(do ((i 0) (j 0)) ((zero? j) (set! i 1) (set! i 2) i)) '2 val)))(display "\r")(let1 val (begin (case (* 2 3) ((2 3 5 7) 'prime) ((1 4 6 8 9) 'composite))) (if (equal? 'composite val) (format #t " Running ~d/~d" 468 1934) (begin (add-error '(case (* 2 3) ((2 3 5 7) 'prime) ((1 4 6 8 9) 'composite)) 'composite val))))
+(display "\r")(let1 val (begin (match '(0 (1 2) (3 4 5)) ((a (b c) (d e f)) (list a b c d e f)))) (if (equal? '(0 1 2 3 4 5) val) (format #t " Running ~d/~d" 458 1934) (add-error '(match '(0 (1 2) (3 4 5)) ((a (b c) (d e f)) (list a b c d e f))) '(0 1 2 3 4 5) val)))(display "\r")(let1 val (begin (match 123 ((? string? x) (list 'string x)) ((? number? x) (list 'number x)))) (if (equal? '(number 123) val) (format #t " Running ~d/~d" 459 1934) (add-error '(match 123 ((? string? x) (list 'string x)) ((? number? x) (list 'number x))) '(number 123) val)))(display "\r")(let1 val (begin (define let-analyzer (match-lambda (('let (? symbol?) ((var expr) ...) body ...) (format "named let, vars=~s exprs=~s" var expr)) (('let ((var expr) ...) body ...) (format "normal let, vars=~s exprs=~s" var expr)) (_ (format "malformed let")))) (let-analyzer '(let ((a b) (c d)) e f g))) (if (equal? '"normal let, vars=(a c) exprs=(b d)" val) (format #t " Running ~d/~d" 460 1934) (add-error (quote (define let-analyzer (match-lambda (('let (? symbol?) ((var expr) ...) body ...) (format "named let, vars=~s exprs=~s" var expr)) (('let ((var expr) ...) body ...) (format "normal let, vars=~s exprs=~s" var expr)) (_ (format "malformed let")))) (let-analyzer '(let ((a b) (c d)) e f g))) '"normal let, vars=(a c) exprs=(b d)" val)))(display "\r")(let1 val (begin (let-analyzer '(let foo ((x (f a b)) (y (f c d))) e f g))) (if (equal? '"named let, vars=(x y) exprs=((f a b) (f c d))" val) (format #t " Running ~d/~d" 461 1934) (add-error '(let-analyzer '(let foo ((x (f a b)) (y (f c d))) e f g)) '"named let, vars=(x y) exprs=((f a b) (f c d))" val)))(display "\r")(let1 val (begin (let-analyzer '(let (a) b c d))) (if (equal? '"malformed let" val) (format #t " Running ~d/~d" 462 1934) (add-error '(let-analyzer '(let (a) b c d)) '"malformed let" val)))(display "\r")(let1 val (begin (match '(the answer is 42) (`(the answer is ,value) value) (else #f))) (if (equal? '42 val) (format #t " Running ~d/~d" 463 1934) (add-error '(match '(the answer is 42) (`(the answer is ,value) value) (else #f)) '42 val)))(display "\r")(let1 val (begin (match '(the answer was 42) (`(the answer is ,value) value) (else #f))) (if (equal? '#f val) (format #t " Running ~d/~d" 464 1934) (add-error '(match '(the answer was 42) (`(the answer is ,value) value) (else #f)) '#f val)))(display "\r")(let1 val (begin (match '(a b c d) ((the answer is value) value) (else #f))) (if (equal? 'd val) (format #t " Running ~d/~d" 465 1934) (add-error '(match '(a b c d) ((the answer is value) value) (else #f)) 'd val)))(display "\r")(let1 val (begin (match "mosh.scm" ((? string? (= #/(.*)\.([^.]+)$/ m)) (format "base=~a suffix=~a" (m 1) (m 2))))) (if (equal? '"base=mosh suffix=scm" val) (format #t " Running ~d/~d" 466 1934) (add-error '(match "mosh.scm" ((? string? (= #/(.*)\.([^.]+)$/ m)) (format "base=~a suffix=~a" (m 1) (m 2)))) '"base=mosh suffix=scm" val)))(display "\r")(let1 val (begin (do ((i 0) (j 0)) ((zero? j) (set! i 1) (set! i 2) i))) (if (equal? '2 val) (format #t " Running ~d/~d" 467 1934) (add-error '(do ((i 0) (j 0)) ((zero? j) (set! i 1) (set! i 2) i)) '2 val)))(display "\r")(let1 val (begin (case (* 2 3) ((2 3 5 7) 'prime) ((1 4 6 8 9) 'composite))) (if (equal? 'composite val) (format #t " Running ~d/~d" 468 1934) (begin (add-error '(case (* 2 3) ((2 3 5 7) 'prime) ((1 4 6 8 9) 'composite)) 'composite val))))
 (display "\r")(let1 val (begin (case (car '(c d)) ((a e i o u) 'vowel) ((w y) 'semivowel) (else 'consonant))) (if (equal? 'consonant val) (format #t " Running ~d/~d" 469 1934) (begin (add-error '(case (car '(c d)) ((a e i o u) 'vowel) ((w y) 'semivowel) (else 'consonant)) 'consonant val))))
 (display "\r")(let1 val (begin (case 1 ((2 1) 0))) (if (equal? '0 val) (format #t " Running ~d/~d" 470 1934) (begin (add-error '(case 1 ((2 1) 0)) '0 val))))
 (display "\r")(let1 val (begin (case 2 ((2 1) 0))) (if (equal? '0 val) (format #t " Running ~d/~d" 471 1934) (begin (add-error '(case 2 ((2 1) 0)) '0 val))))
@@ -463,7 +463,7 @@
 (display "\r")(let1 val (begin (let ((bytevector (make-bytevector 1))) (bytevector-fill! bytevector -1) (bytevector-s8-ref bytevector 0))) (if (equal? '-1 val) (format #t " Running ~d/~d" 655 1934) (begin (add-error '(let ((bytevector (make-bytevector 1))) (bytevector-fill! bytevector -1) (bytevector-s8-ref bytevector 0)) '-1 val))))
 (display "\r")(let1 val (begin (let ((b (make-bytevector 1))) (bytevector-u8-set! b 0 255) (bytevector-u8-ref b 0))) (if (equal? '255 val) (format #t " Running ~d/~d" 656 1934) (begin (add-error '(let ((b (make-bytevector 1))) (bytevector-u8-set! b 0 255) (bytevector-u8-ref b 0)) '255 val))))
 (display "\r")(let1 val (begin (let ((b (make-bytevector 1))) (bytevector-s8-set! b 0 -1) (bytevector-u8-ref b 0))) (if (equal? '255 val) (format #t " Running ~d/~d" 657 1934) (begin (add-error '(let ((b (make-bytevector 1))) (bytevector-s8-set! b 0 -1) (bytevector-u8-ref b 0)) '255 val))))
-(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-ref 1 (make-bytevector 1)))) (format #t " Running ~d/~d" 658 1934) (add-error '(bytevector-u8-ref 1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-ref 1 (make-bytevector 1)))) (format #t " Running ~d/~d" 659 1934) (add-error '(bytevector-s8-ref 1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-ref -1 (make-bytevector 1)))) (format #t " Running ~d/~d" 660 1934) (add-error '(bytevector-u8-ref -1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-ref -1 (make-bytevector 1)))) (format #t " Running ~d/~d" 661 1934) (add-error '(bytevector-s8-ref -1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-set! 1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 662 1934) (add-error '(bytevector-u8-set! 1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! 1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 663 1934) (add-error '(bytevector-s8-set! 1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-set! -1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 664 1934) (add-error '(bytevector-u8-set! -1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 665 1934) (add-error '(bytevector-s8-set! -1 (make-bytevector 1)) 'error 'not-error))(display "\r")(let1 val (begin (u8-list->bytevector '(1 2 3 4))) (if (equal? '#vu8(1 2 3 4) val) (format #t " Running ~d/~d" 666 1934) (begin (add-error '(u8-list->bytevector '(1 2 3 4)) '#vu8(1 2 3 4) val))))
+(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-ref 1 (make-bytevector 1)))) (format #t " Running ~d/~d" 658 1934) (add-error '(bytevector-u8-ref 1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-ref 1 (make-bytevector 1)))) (format #t " Running ~d/~d" 659 1934) (add-error '(bytevector-s8-ref 1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-ref -1 (make-bytevector 1)))) (format #t " Running ~d/~d" 660 1934) (add-error '(bytevector-u8-ref -1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-ref -1 (make-bytevector 1)))) (format #t " Running ~d/~d" 661 1934) (add-error '(bytevector-s8-ref -1 (make-bytevector 1)) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-set! 1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 662 1934) (add-error (quote (bytevector-u8-set! 1 (make-bytevector 1)) 1) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! 1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 663 1934) (add-error (quote (bytevector-s8-set! 1 (make-bytevector 1)) 1) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-u8-set! -1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 664 1934) (add-error (quote (bytevector-u8-set! -1 (make-bytevector 1)) 1) 'error 'not-error))(display "\r")(if (equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1)) (format #t " Running ~d/~d" 665 1934) (add-error (quote (bytevector-s8-set! -1 (make-bytevector 1)) 1) 'error 'not-error))(display "\r")(let1 val (begin (u8-list->bytevector '(1 2 3 4))) (if (equal? '#vu8(1 2 3 4) val) (format #t " Running ~d/~d" 666 1934) (begin (add-error '(u8-list->bytevector '(1 2 3 4)) '#vu8(1 2 3 4) val))))
 (display "\r")(if (equal? 'error (guard (con (#t 'error)) (u8-list->bytevector '(1 2 3 -1 4)))) (format #t " Running ~d/~d" 667 1934) (add-error '(u8-list->bytevector '(1 2 3 -1 4)) 'error 'not-error))(display "\r")(let1 val (begin (bytevector->u8-list #vu8(1 2 3 4))) (if (equal? '(1 2 3 4) val) (format #t " Running ~d/~d" 668 1934) (begin (add-error '(bytevector->u8-list #vu8(1 2 3 4)) '(1 2 3 4) val))))
 (display "\r")(let1 val (begin (bytevector-u16-ref #vu8(255 255 255 255 255 255 255 255 255 255 255 255 255 255 255 253) 14 'little)) (if (equal? '65023 val) (format #t " Running ~d/~d" 669 1934) (begin (add-error '(bytevector-u16-ref #vu8(255 255 255 255 255 255 255 255 255 255 255 255 255 255 255 253) 14 'little) '65023 val))))
 (display "\r")(let1 val (begin (bytevector-s16-ref #vu8(255 255 255 255 255 255 255 255 255 255 255 255 255 255 255 253) 14 'little)) (if (equal? '-513 val) (format #t " Running ~d/~d" 670 1934) (begin (add-error '(bytevector-s16-ref #vu8(255 255 255 255 255 255 255 255 255 255 255 255 255 255 255 253) 14 'little) '-513 val))))
