@@ -1,5 +1,7 @@
 2009-05-18  higepon  <higepon@users.sourceforge.jp>
 
+        * OSCompatThreadTest.cpp : Added.
+
         * OSCompatThread.h : Added for threads. Not yet working.
 
 2009-05-15  higepon  <higepon@users.sourceforge.jp>
